added security tag to handlers
