# REST_API/cmd/docs/swagger.json
@@ -11,6 +11,11 @@
     "paths": {
         "/api/v1/comments/{id}": {
             "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Update a comment in the database by ID.",
                 "consumes": [
                     "application/json"
@@ -68,6 +73,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Delete a comment from the database by ID.",
                 "consumes": [
                     "application/json"
@@ -109,6 +119,11 @@
         },
         "/api/v1/posts": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Get all posts from the database.",
                 "consumes": [
                     "application/json"
@@ -140,6 +155,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Create a new post with the specified data.",
                 "consumes": [
                     "application/json"
@@ -186,6 +206,11 @@
         },
         "/api/v1/posts/{id}": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Get a post from the database by ID.",
                 "consumes": [
                     "application/json"
@@ -222,6 +247,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Update a post in the database by ID.",
                 "consumes": [
                     "application/json"
@@ -279,6 +309,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Delete a post from the database by ID.",
                 "consumes": [
                     "application/json"
@@ -320,6 +355,11 @@
         },
         "/api/v1/posts/{post_id}/comments": {
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Create a new comment for a post with the specified data.",
                 "consumes": [
                     "application/json"
